# deklassiert

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml
assets/: tailwind.css
assets/styling/: main.css  navbar.css
opentransportdata/: Cargo.toml
opentransportdata/examples/: get_request.rs  request_stop.rs  simple.rs
opentransportdata/src/: lib.rs
src/: main.rs
src/components/: header.rs  mod.rs
src/views/: all.rs  home.rs  mod.rs  navbar.rs
test_data/: test_response.json  test_response_2.json  test_response_3.json
