[package]
name = "deklassiert"
version = "0.1.0"
authors = ["hacknus <linus.stoeckli@unibe.ch>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
once_cell = "1.21.3"
opentransportdata = { path = "./opentransportdata" }
tokio = "1.49.0"
dotenv = "0.15.0"
chrono = "0.4.43"
axum = { version = "0.8.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]

server = [
    "dioxus/server",
    "opentransportdata/native-client",
    "dep:axum",
    "dep:tower",
    "dep:tower-http"
]