[package]
name = "opentransportdata"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13", features = ["blocking", "json"] }

[dev-dependencies]
dotenv = "0.15.0"
