[package]
name = "opentransportdata"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13", optional = true, features = ["blocking", "json"] }

[dev-dependencies]
dotenv = "0.15.0"

[features]
default = []
native-client = ["reqwest"]


[[example]]
name = "get_request"
path = "examples/get_request.rs"
required-features = ["native-client"]

[[example]]
name = "simple"
path = "examples/simple.rs"